@@ -1565,7 +1565,7 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     For use especially with self made theme which changes this.
     The default value for this is <code>main.php</code>.</dd>
 
-    <dt id="cfg_LeftLogoLinkWindow">$cfg['LeftLogoLinkWindow'] string</dt>
+    <dt id="cfg_NavigationLogoLinkWindow">$cfg['NavigationLogoLinkWindow'] string</dt>
     <dd>Whether to open the linked page in the main window (<code>main</code>)
     or in a new one (<code>new</code>). Note: use <code>new</code> if you are
     linking to <code>phpmyadmin.net</code>.</dd>
