@@ -271,8 +271,6 @@ $strConfigInsertRows_name = __('Number of inserted rows');
 $strConfigLeftDisplayServers_desc = __('Display server choice at the top of the left frame');
 $strConfigLeftDisplayServers_name = __('Display servers selection');
 $strConfigLeftDisplayDatabaseFilterMinimum_name = __('Minimum number of databases to display the database filter box');
-$strConfigLeftLogoLinkWindow_desc = __('Open the linked page in the main window ([kbd]main[/kbd]) or in a new one ([kbd]new[/kbd])');
-$strConfigLeftLogoLinkWindow_name = __('Logo link target');
 $strConfigLeftRecentTable_desc = __('Maximum number of recently used tables; set 0 to disable');
 $strConfigLeftRecentTable_name = __('Recently used tables');
 $strConfigLimitChars_desc = __('Maximum number of characters shown in any non-numeric column on browse view');
@@ -307,6 +305,8 @@ $strConfigNavigationDisplayLogo_desc = __('Show logo in left frame');
 $strConfigNavigationDisplayLogo_name = __('Display logo');
 $strConfigNavigationLogoLink_desc = __('URL where logo in the navigation frame will point to');
 $strConfigNavigationLogoLink_name = __('Logo link URL');
+$strConfigNavigationLogoLinkWindow_desc = __('Open the linked page in the main window ([kbd]main[/kbd]) or in a new one ([kbd]new[/kbd])');
+$strConfigNavigationLogoLinkWindow_name = __('Logo link target');
 $strConfigNavigationTreeDefaultTabTable_name = __('Target for quick access icon');
 $strConfigNavigationTreeDisplayItemFilterMinimum_desc = __('Defines the minimum number of items (tables, views, routines and events) to display a filter box.');
 $strConfigNavigationTreeDisplayItemFilterMinimum_name = __('Minimum number of items to display the filter box');
